<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margen"
    tools:context="com.grupomdc.ejercicio11.MainActivity">

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_descripcion"
        />
    <ImageView
        android:id="@+id/ivLogotipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logocetis125"
        android:contentDescription="@string/texto_descripcion"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/btIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_ingresar"/>
    <TextView
        android:id="@+id/tvIntegrantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_integrantes"/>
</LinearLayout>
